Mô tả thay đổi của bạn, ví dụ: Sửa giao diện login đẹp hơn

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,9 @@
 		<true/>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
-	</dict>
-</plist>
+		<key>NSCameraUsageDescription</key>
+		<string>Huy Phan App cần truy cập camera để quét QR Code sản phẩm</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>Huy Phan App cần truy cập microphone để quét QR Code (một số thiết bị yêu cầu)</string>
+			</dict>
+		</plist>
