--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   qr_flutter: ^4.1.0
   mobile_scanner: ^5.1.1
   permission_handler: ^12.0.1
+  screenshot: ^3.0.0          # Để chụp ảnh QR
+  printing: ^5.12.0  
+  pdf: ^3.11.1         # Để in QR ra máy in (Bluetooth/WiFi)
+  path_provider: ^2.1.3       # Lấy thư mục lưu ảnh
+  
 
 dev_dependencies:
   flutter_test:
