--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.8
-  image_picker: ^1.1.2
-  http: ^1.2.2
+  http: ^1.2.0
   flutter_easyloading: ^3.0.5
   qr_flutter: ^4.1.0
   mobile_scanner: ^5.1.1
-  permission_handler: ^12.0.1
-  screenshot: ^3.0.0          # Để chụp ảnh QR
-  printing: ^5.12.0  
-  pdf: ^3.11.1         # Để in QR ra máy in (Bluetooth/WiFi)
-  path_provider: ^2.1.3       # Lấy thư mục lưu ảnh
+  image_picker: ^1.0.7
+  pdf: ^3.10.8
+  printing: ^5.12.0
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
+  
+ 
   
 
 dev_dependencies:
