--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   printing: ^5.12.0
   path_provider: ^2.1.2
   permission_handler: ^11.3.1
-  
+  shared_preferences: ^2.3.0
+  badges: ^3.1.2
  
   
 
