--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAgsEmDRXL3lmmA8qu1O5rBATmhGwbpyxg</string>
+	<string>AIzaSyDzTFAke0pcRJbVATdgZXq35kjQSd5JSfE</string>
 	<key>GCM_SENDER_ID</key>
-	<string>539268712948</string>
+	<string>292708078896</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.huyphanApp</string>
 	<key>PROJECT_ID</key>
-	<string>huyphan-47e6b</string>
+	<string>huyphan-50dc1</string>
 	<key>STORAGE_BUCKET</key>
-	<string>huyphan-47e6b.firebasestorage.app</string>
+	<string>huyphan-50dc1.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:539268712948:ios:b36d0f7d334c7bb5a911a1</string>
+	<string>1:292708078896:ios:60a4bbf8acfe224a0224f5</string>
 </dict>
 </plist>
